# mdv

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  validate.sh
.github/workflows/: ci.yml
assets/: style.css  template.html
assets/demo/: basic.md  second.md  third.md
examples/: dump_html.rs
specs/: mdv-architecture.md  mdv-cli.md  mdv-rendering.md  mdv-review.md
src/: assets.rs  main.rs  render.rs
tests/: coverage_tests.rs  render_tests.rs
tests/fixtures/: related.md  sample.md
