[package]
name = "mdv"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Joshua Lee Bauer"]
description = "Fast, self-contained markdown viewer for Linux with KaTeX math rendering, syntax highlighting, review mode, and large-file streaming"
license = "MIT"
repository = "https://github.com/noboomu/mdv"
homepage = "https://github.com/noboomu/mdv"
readme = "README.md"
keywords = ["markdown", "viewer", "katex", "math", "linux"]
categories = ["command-line-utilities", "text-processing", "visualization"]

[[bin]]
name = "mdv"
path = "src/main.rs"

[dependencies]
tao = "0.30"
wry = { version = "0.46", default-features = false, features = ["os-webview", "protocol"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy", "html"] }
open = "5"
anyhow = "1"
once_cell = "1"
urlencoding = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
